<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    
<string name="lbl_18_12_2019">18/12/2019</string>
<string name="lbl_hot_air_balloon">Hot air balloon</string>
<string name="lbl_back">Back</string>
<string name="lbl_morris_henry">Morris Henry</string>
<string name="lbl_20_12_2019">20/12/2019</string>
<string name="lbl_342">342</string>
<string name="msg_eum_dicta_fuiss">Eum dicta fuisset phaedrum ei.</string>
<string name="msg_22_december_20">22 December, 2019</string>
<string name="lbl_chat">Chat</string>
<string name="msg_an_suas_viderer">An suas viderer pro. Vis cu magna altera, ex his vivendo atomorum.</string>
<string name="lbl_jellyfish">Jellyfish</string>
<string name="lbl_other_posts">Other posts</string>
<string name="lbl_today">Today</string>
<string name="lbl_16_12_2019">16/12/2019</string>
<string name="lbl_annette_cooper">Annette Cooper</string>
<string name="lbl_follow">Follow</string>
<string name="lbl_sign_in">Sign In</string>
<string name="lbl_8563">8563</string>
<string name="msg_voluptate_irure">Voluptate irure aliquip consectetur commodo ex ex.</string>
<string name="lbl_kathryn_cooper">Kathryn Cooper</string>
<string name="msg_don_t_have_an">Don���t have an account? Create account</string>
<string name="lbl_jane_warren">Jane Warren</string>
<string name="lbl_comments">Comments</string>
<string name="msg_welcome_back_s">Welcome back,
Sign in to continue etiam tacimates sed ad</string>
<string name="msg_forgot_password">Forgot password?</string>
<string name="lbl_jorge_watson">Jorge Watson</string>
<string name="msg_dolore_veniam_l">Dolore veniam Lorem occaecat veniam irure laborum est amet.</string>
<string name="lbl_7483">7483</string>
<string name="lbl_1_hour_ago">1 hour ago</string>
<string name="lbl_email">Email</string>
<string name="lbl_6473">6473</string>
<string name="msg_architecture">#architecture, #relax</string>
<string name="lbl_17_12_2019">17/12/2019</string>
<string name="lbl_search">Search</string>
<string name="lbl_2_hours_ago">2 hours ago</string>
<string name="msg_reprehenderit_m">Reprehenderit mollit excepteur labore deserunt officia laboris eiusmod cillum eu duis</string>
<string name="lbl_login">Login</string>
<string name="msg_aliqua_mollit_n">Aliqua mollit nisi incididunt id eu consequat eu cupidatat.</string>
<string name="lbl_irma_flores">Irma Flores</string>
<string name="msg_amet_enim_do_la">Amet enim do laborum tempor nisi aliqua ad adipisicing.</string>
<string name="msg_ex_lorem_veniam">Ex Lorem veniam veniam irure sunt adipisicing culpa.</string>
<string name="msg_ronald_robertso">Ronald Robertson</string>
<string name="lbl_reply">Reply</string>
<string name="lbl_my_posts">My posts</string>
<string name="lbl_cameron_steward">Cameron Steward</string>
<string name="lbl_johnny_watson">Johnny Watson</string>
<string name="msg_sed_affert_dele">Sed affert delenit ea. Nam at ferri facete inermis. Eum dicta fuisset phaedrum ei, et amet iuvaret vituperatoribus vix.</string>
<string name="msg_an_summo_saepe">An summo saepe maiestatis sit, ei saepe lobortis senserit eos.</string>
<string name="lbl_password">Password</string>
<string name="lbl_yesterday">Yesterday</string>
<string name="lbl_arthur_bell">Arthur Bell</string>
</resources>
